<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/no_margin"
    android:paddingLeft="@dimen/no_margin"
    android:paddingRight="@dimen/no_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >

    <ViewFlipper
        android:id="@+id/adviceFlipper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/advice_flipper_height"
        android:animateFirstView="false"
        android:autoStart="true"
        android:flipInterval="@integer/advice_flip_interval"
        android:inAnimation="@anim/flyin"
        android:outAnimation="@anim/flyout" >
    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:src="@drawable/brush_teeth" />
	
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:src="@drawable/drink_lycium_chrysanthemum" />
	
	    </RelativeLayout>
    
    </ViewFlipper>

    <LinearLayout
        android:id="@+id/stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" 
        android:orientation="horizontal"
	    android:layout_below="@id/adviceFlipper"
	    android:layout_above="@+id/bottomMenu">
	    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/light_grey"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/recordBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_record"
            android:onClick="onRecordBtnClicked"
            android:paddingTop="1dp"
            android:text="@string/record" />

        <Button
            android:id="@+id/statsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_stats"
            android:paddingBottom="1dp"
            android:text="@string/stats" />
        
        <Button
            android:id="@+id/socialBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_social"
            android:paddingTop="2dp"
            android:text="@string/social" />

        <Button
            android:id="@+id/historyBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_history"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/history" />

    </LinearLayout>

</RelativeLayout>
